--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     {% endblock %}
 
-    {% block extra_css %}
+    {% block extra_meta %}
     {% endblock %}
 
     {% block corecss %}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {% endblock %}
+
+    {% block extra_css %}
     {% endblock %}
 
     {% block corejs %}
@@ -42,7 +45,7 @@
     {% block content %}
     {% endblock %}
 
-    {% block_postloadjs %}
+    {% block postloadjs %}
     {% endblock %}
     
 </body>
