--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -50,7 +50,7 @@
                     {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
 
-                    <form class="form" action="{% url 'add_to_bag' products.id %}" method="POST">
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
@@ -79,7 +79,21 @@
                                     </div>
                                 </div>
                             </div>
-                </div>
+
+                            <div class="col-12">
+                                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+        
+                        </div>
+                    </form>
+                        </div>
             </div>
         </div>
     </div>
