--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -110,4 +110,9 @@
             </div>
         </div>
     </div>
-    {% endblock %}                
+    {% endblock %}
+    
+    {% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input_script.html' %}
+    {% endblock %}
