--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <title>All Tees {% block extra_title %}{% endblock %} </title>
 </head>
 <body>
-    <header class="container-fluid fixed-top">
+    <nav class="container-fluid fixed-top">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -111,7 +111,8 @@
                 <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
             </div>            
         </div>
-    </header>
+    </nav>
+
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
