about us section text added

--- a/home/templates/home/more/about_us.html
+++ b/home/templates/home/more/about_us.html
@@ -3,11 +3,39 @@
 
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col">About Us</div>
+<header>
+    <div>   
+        <h1>About Us</h1>
+        <div class="subtitle">
+            <p>Our Mission</p>
         </div>
     </div>
+</header>
 {% endblock %}
 
-
+{% block content %}
+<section class="d-flex justify-content-center align-items-center">
+    <div class="card-container text-justify">
+<p>
+    Welcome to All Tees, your ultimate destination for premium quality tees that celebrate your favorite moments from the movies, TV shows, cartoons, and music bands that have shaped our lives. 
+    Founded by a group of pop culture aficionados, our journey began with a simple mission: to create a space where fans can express their love for iconic entertainment through high-quality, comfortable, and stylish apparel.
+</p>
+<p>
+    At All Tees, we believe that a great tee does more than just look good—it tells a story, sparks conversations, and connects us to the memories and emotions tied to our favorite cinematic and musical moments. 
+    Our collection is a tribute to the classics that have stood the test of time, as well as the latest sensations captivating our hearts and screens.
+</p>
+<p>
+    We are committed to providing an unmatched shopping experience, with a carefully curated selection of designs that cater to all tastes. 
+    Whether you're a die-hard fan of timeless classics or the latest binge-worthy series, a cartoon enthusiast, or a music aficionado, our store has something special for you.
+    Each tee is crafted with love and precision, ensuring that you receive a product that meets our high standards of quality and sustainability.
+</p>
+<p>
+    Our team at All Tees is constantly on the lookout for new inspirations and trends, aiming to bring you fresh and exciting merchandise that celebrates the vast and diverse world of entertainment.
+    We value the community we're building with you and are always eager to hear your suggestions and feedback.
+</p>
+<p>
+    Thank you for choosing All Tees. Wear your passions proudly and let your tees do the talking!
+</p>
+    </div>
+</section>
+{% endblock %}
