--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -45,9 +45,9 @@
                 More
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">About us</a>
-                <a href="" class="dropdown-item">Careers</a>
-                <a href="" class="dropdown-item">News</a>
+                <a href="{% url 'about_us' %}" class="dropdown-item">About us</a>
+                <a href="{% url 'careers' %}" class="dropdown-item">Careers</a>
+                <a href="{% url 'news' %}" class="dropdown-item">News</a>
             </div>
         </li>
     </ul>
