careers model created

--- a/home/templates/home/more/careers.html
+++ b/home/templates/home/more/careers.html
@@ -3,11 +3,18 @@
 
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col">Careers</div>
+<header>
+    <div>   
+        <h1>Careers</h1>
+        <div class="subtitle">
+            <p>Join to our Team!</p>
         </div>
     </div>
+</header>
+{% endblock %}
+
+{% block content %}
+
 {% endblock %}
 
 
