--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
                             <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                                <div><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
                                         ${{ grand_total|floatformat:2 }}
@@ -136,9 +136,8 @@
     {% endblock %}
     
     <!-- Footer-->
-<footer>
+    <footer>
     <!-- Top Footer -->
-    
         <div class="d-flex justify-content-around align-items-center pt-2">
             <!-- Left -->
             <div class="footer-left">
@@ -189,6 +188,6 @@
                 </form>
             </div>
         </div>
-</footer>
+    </footer>
 </body>
 </html>
