--- a/home/templates/home/more/careers.html
+++ b/home/templates/home/more/careers.html
@@ -14,7 +14,19 @@
 {% endblock %}
 
 {% block content %}
-
+<section class="d-flex justify-content-center align-items-center">
+    <div class="card-container mt-4 mb-4">
+        <div class="d-flex">
+            <form method="post" action="{% url 'careers' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-outline-dark">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</section>
 {% endblock %}
 
 
