--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,23 +6,17 @@
 {% endblock %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<header>
+    <div>   
+        <h1>My Profile</h1>
     </div>
+</header>
 {% endblock %}
 
 {% block content %}
+<section class="profile-section">
     <div class="overlay"></div>
     <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">My Profile</h2>
-                <hr>
-            </div>
-        </div>
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Default Delivery Information</p>
@@ -74,6 +68,7 @@
             </div>
         </div>
     </div>
+</section>
 {% endblock %}
 
 {% block postloadjs %}
