--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,8 +25,6 @@ body {
     border-radius: 10px;
 }
 
-
-
 .post-container {
     height: 300px;
     width: 300px;
@@ -42,6 +40,11 @@ body {
     height: auto;
 }
 
+.profile-section{
+    height: 55vh;
+    display: flex;
+    align-items: center;
+}
 /******** FOOTER *********/
 
 footer {
