add comment section added and working

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -106,10 +106,67 @@
                             {% endwith %}
                         </div>
                     </form>
-                        </div>
+                </div>
+
+
+                
             </div>
+
+            
         </div>
+
+        <!-- COMMENTS -->
+<div class="comments-container">        
+    <div>
+        <h2>Reviews</h2>
+
+        <div>
+            {% for comment in comments %}
+            <div>
+                <strong>{{ comment.user.username }}: </strong><small>{{comment.date_added}}</small>
+                <br>
+            
+            </div>
+            {{ comment.text }}
+            {% if user.is_authenticated and comment.user == user %}
+                <!--Edit comment -->
+                <button><a class="nav-link px-0" href=""><i class="fa-regular fa-pen-to-square"></i></a></button>
+
+                <!--Delete comment -->
+                <button><a class="nav-link px-0" href=""><i class="fa-solid fa-trash"></i></a></button>
+                {% endif %}
+
+                {% empty %}
+                <div class="notification">
+                    <p>No comments yet!</p>
+                </div>
+                {% endfor %}
+                <hr>
+        </div>
+
+        <!-- ADD COMMENT -->
+<div>
+    <h6>Add a comment</h6>
+    <br>
+    <form method="POST" action="{% url 'product_detail' product.id %}">
+        {% if user.is_authenticated %}
+        {% csrf_token %}
+        {{ comment_form.text }}                  
+            <div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </div>
+        {% else %}
+        <p><a href="{% url 'sign_in' %}">LOGIN</a>  or <a href="{% url 'register' %}">REGISTER</a>  to leave a comment!</p>
+        {% endif %}
+    </form>
+</div>
     </div>
+</div>
+
+
+</div>
+
+
     {% endblock %}
     
     {% block postloadjs %}
