--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -130,10 +130,10 @@
             {{ comment.text }}
             {% if user.is_authenticated and comment.user == user %}
                 <!--Edit comment -->
-                <button><a class="nav-link px-0" href=""><i class="fa-regular fa-pen-to-square"></i></a></button>
+                <button><a class="nav-link px-0" href="{% url 'edit_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-regular fa-pen-to-square"></i></a></button>
 
                 <!--Delete comment -->
-                <button><a class="nav-link px-0" href=""><i class="fa-solid fa-trash"></i></a></button>
+                <button><a class="nav-link px-0" href="{% url 'delete_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-solid fa-trash"></i></a></button>
                 {% endif %}
 
                 {% empty %}
@@ -156,7 +156,7 @@
                 <button class="btn btn-outline-dark">Submit</button>
             </div>
         {% else %}
-        <p><a href="{% url 'sign_in' %}">LOGIN</a>  or <a href="{% url 'register' %}">REGISTER</a>  to leave a comment!</p>
+        <p><a href="{% url 'account_login' %}">LOGIN</a>  or <a href="{% url 'account_signup' %}">REGISTER</a>  to leave a comment!</p>
         {% endif %}
     </form>
 </div>
