--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,13 +11,13 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container-fluid">
+    <div class="container-fluid mb-4">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
                     {% if product.image %}
                         <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                            <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}" height="500px" width="300px">
                         </a>
                         {% else %}
                         <a href="">
@@ -116,55 +116,53 @@
         </div>
 
         <!-- COMMENTS -->
-<div class="comments-container">        
-    <div>
-        <h2>Reviews</h2>
-
-        <div>
-            {% for comment in comments %}
+        <div class="comments-container">        
             <div>
-                <strong>{{ comment.user.username }}: </strong><small>{{comment.date_added}}</small>
-                <br>
-            
-            </div>
-            {{ comment.text }}
-            {% if user.is_authenticated and comment.user == user %}
-                <!--Edit comment -->
-                <button><a class="nav-link px-0" href="{% url 'edit_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-regular fa-pen-to-square"></i></a></button>
+                <h2>Reviews</h2>
 
-                <!--Delete comment -->
-                <button><a class="nav-link px-0" href="{% url 'delete_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-solid fa-trash"></i></a></button>
-                {% endif %}
+                <div>
+                    {% for comment in comments %}
+                    <div>
+                        <strong>{{ comment.user.username }}: </strong><small>{{comment.date_added}}</small>
+                        <br>
+                    
+                    </div>
+                    {{ comment.text }}
+                    {% if user.is_authenticated and comment.user == user %}
+                        <!--Edit comment -->
+                        <button><a class="nav-link px-0" href="{% url 'edit_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-regular fa-pen-to-square"></i></a></button>
 
-                {% empty %}
-                <div class="notification">
-                    <p>No comments yet!</p>
+                        <!--Delete comment -->
+                        <button><a class="nav-link px-0" href="{% url 'delete_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-solid fa-trash"></i></a></button>
+                        {% endif %}
+
+                        {% empty %}
+                        <div class="notification">
+                            <p>No comments yet!</p>
+                        </div>
+                        {% endfor %}
+                        <hr>
                 </div>
-                {% endfor %}
-                <hr>
-        </div>
 
-        <!-- ADD COMMENT -->
-<div>
-    <h6>Add a comment</h6>
-    <br>
-    <form method="POST" action="{% url 'product_detail' product.id %}">
-        {% if user.is_authenticated %}
-        {% csrf_token %}
-        {{ comment_form.text }}                  
-            <div>
-                <button class="btn btn-outline-dark">Submit</button>
+                <!-- ADD COMMENT -->
+                <div>
+                    <h6>Add a comment</h6>
+                    <br>
+                    <form method="POST" action="{% url 'product_detail' product.id %}">
+                        {% if user.is_authenticated %}
+                        {% csrf_token %}
+                        {{ comment_form.text }}                  
+                            <div>
+                                <button class="btn btn-outline-dark">Submit</button>
+                            </div>
+                        {% else %}
+                        <p><a href="{% url 'account_login' %}">LOGIN</a>  or <a href="{% url 'account_signup' %}">REGISTER</a>  to leave a comment!</p>
+                        {% endif %}
+                    </form>
+                </div>
             </div>
-        {% else %}
-        <p><a href="{% url 'account_login' %}">LOGIN</a>  or <a href="{% url 'account_signup' %}">REGISTER</a>  to leave a comment!</p>
-        {% endif %}
-    </form>
-</div>
+        </div>
     </div>
-</div>
-
-
-</div>
 
 
     {% endblock %}
