--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,23 +1,29 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
 
-{% block head_title %}{% trans "Sign Out" %}{% endblock %}
-
-{% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Sign Out" %}</h2>
-<hr>
-<p>{% trans 'Are you sure you want to sign out?' %}</p>
-
-<form method="post" action="{% url 'account_logout' %}">
-  {% csrf_token %}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-  {% endif %}
-  <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-  <button type="submit">{% trans 'Sign Out' %}</button>
-</form>
-
+{% block page_header %}
+<header>
+    <div>   
+        <h1>Sign Out</h1>
+    </div>
+</header>
+{% endblock %}
+{% block content %}
+<div class="sign-out">
+  <div>
+    <p>Are you sure you want to sign out?</p>
+  </div>
+  <div>
+    <form method="post" action="{% url 'account_logout' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+      {% endif %}
+      <button type="submit" class="btn btn-outline-dark">Sign Out</button>
+      <a class="btn btn-outline-dark" href="{% url 'home' %}">Cancel</a>
+    
+    </form>
+  </div>
+</div>
 
 {% endblock %}
