--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -61,23 +61,25 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
-                                    <p class="mb-0">{{ product.name }}</p>
+                                    <p class="mb-0 text-center">{{ product.name }}</p>
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer bg-white pt-0 border-0">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                            <p class="lead mb-0 font-weight-bold text-center">${{ product.price }}</p>
                                             {% if product.category %}
-                                            <p class="small mt-1 mb-0">
+                                            <p class="small mt-1 mb-0 text-center">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                                                    <i class="fas fa-tag mr-1 "></i>{{ product.category.friendly_name }}
                                                 </a>
                                             </p>
                                             {% endif %}
                                             {% if product.rating %}
-                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                                <p class="text-center">
+                                                <small class="text-muted text-center"><i class="fas fa-star mr-1 text-center"></i>{{ product.rating }} / 5</small>
+                                                 </p>
                                             {% else %}
-                                                <small class="text-muted">No Rating</small>
+                                                <small class="text-muted text-center">No Rating</small>
                                             {% endif %}
                                             {% if request.user.is_superuser %}
                                                 <small class="ml-3">
