--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,14 +3,18 @@ html {
 }
 
 body {
-    background: white no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh - 164px);
+    background: #fff no-repeat center center fixed;
+    height: 70vh;
     color: #555;
     font-family: 'Lato';
 }
 
 /**************/
+.index{
+    background: url('/media/images/all-tees.webp') no-repeat center center fixed;
+    background-size: cover;
+}
+
 
 .comments-container{
     display: flex;
@@ -154,9 +158,9 @@ header {
 }
 
 .shop-now-button {
-    background: black;
-    color: white;
     min-width: 260px;
+    border: 3px solid;
+    font-weight: bolder;
 }
 
 .btn-black {
@@ -183,8 +187,8 @@ header {
 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
-    background: #222;
-    color: white;
+    background: #fff;
+    color: #222;
 }
 
 .text-black {
