--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,7 +11,9 @@ body {
 
 /**************/
 .index{
-    background: url('/media/images/all-tees.webp') no-repeat center center fixed;
+    background-image: url('https://all-tees.s3.eu-west-1.amazonaws.com/media/all-tees.webp');
+    background-repeat: no-repeat;
+    background-position: center center;
     background-size: cover;
 }
 
