delete and comment button css improved

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="h-100 index d-flex justify-content-center align-items-center">
-        <h4>
-            <a href="{% url 'products' %}" class="btn btn-outline-light btn-lg text-uppercase py-3 shop-now-button">Shop Now</a>
-        </h4>
-    </div>
+<section class="index">
+    <h4>
+        <a href="{% url 'products' %}" class="btn btn-outline-light btn-lg text-uppercase py-3 shop-now-button">Shop Now</a>
+    </h4>
+</section>
 {% endblock %}
