--- a/products/templates/products/delete_comment.html
+++ b/products/templates/products/delete_comment.html
@@ -19,7 +19,7 @@
         <p>Are you sure you want to delete this comment?</p>
             <form method="post">
             {% csrf_token %}
-                <button class="btn btn-outline-dark" type="submit">Yes</button>
+                <button class="btn btn-outline-dark" type="submit" aria-label="yes">Yes</button>
                 <a class="btn btn-outline-dark" href="{% url 'product_detail' product_id %}">No</a>
             </form> 
     </div>
