--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -57,7 +57,7 @@
                             {% if s %}
                                 <div class="col-12">
                                     <p><strong>Size:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size' aria-label="size">
                                         <option value="xs">XS</option>
                                         <option value="s">S</option>
                                         <option value="m" selected>M</option>
@@ -78,7 +78,7 @@
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input id_qty_{{ product.id }}" type="number"
+                                        <input aria-label="quantity" class="form-control qty_input id_qty_{{ product.id }}" type="number"
                                             name="quantity" value="1" min="1" max="99"
                                             data-item_id="{{ product.id }}">
                                         <div class="input-group-append">
@@ -125,10 +125,10 @@
                     {{ comment.text }}
                     {% if user.is_authenticated and comment.user == user %}
                         <!--Edit comment -->
-                        <button aria-label="edit"><a class="nav-link px-0" href="{% url 'edit_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-regular fa-pen-to-square"></i></a></button>
+                        <button aria-label="edit"><a aria-label="edit" class="nav-link px-0" href="{% url 'edit_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-regular fa-pen-to-square"></i></a></button>
 
                         <!--Delete comment -->
-                        <button aria-label="delete"><a class="nav-link px-0" href="{% url 'delete_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-solid fa-trash"></i></a></button>
+                        <button aria-label="delete"><a aria-label="edit" class="nav-link px-0" href="{% url 'delete_comment' comment_id=comment.id product_id=product.id %}"><i class="fa-solid fa-trash"></i></a></button>
                         {% endif %}
 
                         {% empty %}
@@ -141,7 +141,7 @@
 
                 <!-- ADD COMMENT -->
                 <div>
-                    <h6>Add a comment</h6>
+                    <h3>Add a comment</h3>
                     <br>
                     <form method="POST" action="{% url 'product_detail' product.id %}">
                         {% if user.is_authenticated %}
